[gd_scene load_steps=12 format=3 uid="uid://bg5r8w6ybgfc5"]

[ext_resource type="PackedScene" uid="uid://dkw40t30g5351" path="res://player/my_xr_grabbable_cockpit.tscn" id="1_p2e56"]
[ext_resource type="Script" path="res://gameplay/cockpit_console/virtual/vhud_button_grabbable.gd" id="2_0p3vf"]
[ext_resource type="Material" uid="uid://n1tfoa734agl" path="res://gameplay/cockpit_console/virtual/holo_shader_mat.tres" id="2_btptg"]
[ext_resource type="FontFile" uid="uid://cnyb68a32apyf" path="res://assets/fonts/B612_Mono/B612Mono-Regular.ttf" id="3_s1fby"]

[sub_resource type="BoxMesh" id="BoxMesh_3askc"]
size = Vector3(0.05, 0.02, 0.02)

[sub_resource type="Animation" id="Animation_fj28c"]
resource_name = "click"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1, 1, 0.75), Vector3(1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_kpgw7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_v66fe"]
resource_name = "press"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1, 1, 0.75)]
}

[sub_resource type="Animation" id="Animation_bah0d"]
resource_name = "release"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 1, 0.75), Vector3(1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j35se"]
_data = {
"RESET": SubResource("Animation_kpgw7"),
"click": SubResource("Animation_fj28c"),
"press": SubResource("Animation_v66fe"),
"release": SubResource("Animation_bah0d")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_bepg5"]
margin = 0.005
size = Vector3(0.05, 0.02, 0.02)

[node name="VHUDButtonGrabbable" node_paths=PackedStringArray("animation_player") instance=ExtResource("1_p2e56")]
script = ExtResource("2_0p3vf")
controller_action = "trigger_click"
animation_player = NodePath("MeshInstance3D/AnimationPlayer")
grabbable = false
get_controller_input = false
get_controller_input_while_hovered = true
drop_on_release = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="." index="0"]
mesh = SubResource("BoxMesh_3askc")
surface_material_override/0 = ExtResource("2_btptg")

[node name="Label3D" type="Label3D" parent="MeshInstance3D" index="0"]
pixel_size = 0.0002
modulate = Color(0, 1, 0, 1)
outline_modulate = Color(0, 0, 0, 0)
text = "TEXT"
font = ExtResource("3_s1fby")
font_size = 100

[node name="AnimationPlayer" type="AnimationPlayer" parent="MeshInstance3D" index="1"]
libraries = {
"": SubResource("AnimationLibrary_j35se")
}

[node name="CollisionShape3D" type="CollisionShape3D" parent="." index="1"]
shape = SubResource("BoxShape3D_bepg5")

[connection signal="controller_input_pressed" from="." to="." method="_on_controller_input_pressed"]
[connection signal="controller_input_released" from="." to="." method="_on_controller_input_released"]
